    * IMPORTANT: It is possible to yank more fields now, but it destroies previous key bindings.
      [m]yf[m] or [m]yy[m] to copy "From:"
      [m]ys[m] to copy Subject
      [m]y#[m] to copy Message ID
      [m]yt[m] to copy "To:"
      [m]yr[m] to copy recipients, To: + Cc:
      [m]yu[m] to copy URL of feed (only for RSS)
    * IMPORTANT: Support for sub-commands.
      And subCommands argument is added 4th commands.parseArgs's arguments.
    * Fix moving of more than one message with :moveto
    * add l1,l2,...,l5 to directly tag a message with the 1st, 2nd, ... tag
    * Fix ctrl-shift-n/p going to next/prev unread folder (thanks temerako)
    * fix all l* (label read/starred/etc.) mappings for new Thunderbirds
    * add ":dialog accounts" to open Thunderbird's account manager
    * change archive action (<C-s>) to use Thunderbird3 default feature
    * remove "archivefolder" option
    * Support rich text editor written by HTML.
      mode is into editing mode (INSERT, TEXTAREA, VISUAL) if the focused window is editable.
      And update map [m]i[m]: into be editing mode if editable otherwise MESSAGE mode.
    * enable to edit a HTML message on HTML compose mode.
    * new 'foldermode' option to change folder panel view.
    * add *-javascript* flag to [c]:abbreviate[c], [c]:iabbrev[c] and [c]:cabbrev[c].
    * More small fixes
    * enable 'hinttags' and 'extenedhinttags' to setlocal

2010-03-29
    * version 0.6
    * remove special handling of Ctrl-v/Ctrl-z in insert mode so that usual
      copy'n'paste actions will work again when writing a message
    * add +/- mapping in normal mode for pagewise scrolling of message
      (like <Space>, but without automatic jump to next unread message)
    * add ! mapping to toggle "junk" state of a message
    * asciidoc is no longer required to build Muttator
    * The full help system now available for Muttator.
    * add 'titlestring' option
    * rename *FolderLoaded* autocommand event to *FolderLoad*