@@ -1233,8 +1233,7 @@ const Buffer = Module("buffer", {
                 if (filename) {
                     let file = io.File(filename);
 
-                    liberator.assert(!file.exists() || args.bang,
-                        "E13: File exists (add ! to override)");
+                    liberator.assert(!file.exists() || args.bang, "File exists (add ! to override)");
 
                     chosenData = { file: file, uri: window.makeURI(doc.location.href, doc.characterSet) };
                 }
@@ -1491,7 +1490,7 @@ const Buffer = Module("buffer", {
             },
             { count: true });
 
-        mappings.add(myModes, ["i", "<Insert>"],
+        mappings.add(myModes, ["c", "<Insert>"],
             "Start caret mode",
             function () {
                 if (Editor.windowIsEditable()) {
