@@ -17,30 +17,29 @@ to &liberator.host;, or to the web page, and have it retain its original meaning
 have 2 possibilities:
 
 <item>
-    <tags><![CDATA[pass-through <C-z> CTRL-Z]]></tags>
-    <spec>CTRL-Z</spec>
+    <tags><![CDATA[ignore-all-keys <C-Esc>]]></tags>
+    <spec>&lt;C-Esc></spec>
     <description>
         <p>
-            Disable all &liberator.appname; keys except <k name="Esc"/> and pass them to the next event
-            handler. This is especially useful if JavaScript controlled forms (e.g., the
-            RichEdit form fields of Gmail) don't work anymore. To exit this mode, press
-            <k name="Esc"/>. If you also need to pass <k name="Esc"/> in this mode to the web page,
-            prepend it with <k name="C-v"/>.
+            Disable all &liberator.appname; keys including <k name="Esc"/> and
+            pass them to the next event handler. This is especially useful if
+            JavaScript controlled forms (e.g., the RichEdit form fields of
+            Gmail) don't work anymore or you want to work with web apps like
+            Google Reader which have a lot of useful shortcuts themselves. To
+            exit this mode, press <k name="C-Esc"/> again.
         </p>
     </description>
 </item>
 
 
 <item>
-    <tags><![CDATA[send-key <C-v> CTRL-V]]></tags>
-    <spec>CTRL-V</spec>
+    <tags><![CDATA[ignore-key i]]></tags>
+    <spec>i</spec>
     <description>
         <p>
             If you only need to pass a single key to a JavaScript form field or another
-            extension prefix the key with <k name="C-v"/>. Also works to unshadow &liberator.host;
-            shortcuts like <k name="C-o"/> which are otherwise hidden in &liberator.appname;. When
-            &liberator.appname; mode is temporarily disabled with <k name="C-z"/>, <k name="C-v"/> will pass
-            the next key to &liberator.appname; instead of the web page.
+            extension prefix the key with <k>i</k>. Also works to unshadow &liberator.host;
+            shortcuts like <k name="C-o"/> which are otherwise hidden in &liberator.appname;.
         </p>
     </description>
 </item>
