@@ -1,5 +1,7 @@
 2011-xx-xx:
     * version 3.1
+    * IMPORTANT: PASSTHROUGH mode has been reworked. Press 'i' to ignore a single
+      key, and Ctrl-Esc to toggle vimperator completely.
     * Vimperator works around Firefox's tab scrolling now. So the minimum
       tab width is now just 16px anymore, and you are much more unlikely to
       see scrollbars in the tab bar.
